--- a/style.css
+++ b/style.css
@@ -495,10 +495,10 @@ img{
 	transition: all 0.5s;
 }
 .logo {
-	height: 100px;
-	width: 85px;
+	height: 50px;
+	width: 50px;
 	margin-right: 45px;
-	margin-top: -1px;
+	margin-top: 20px;
 	padding: 0;
 }
 .logo-compressed {
@@ -621,6 +621,8 @@ img{
 	width: 100%;
 }
 .welcome-area{
+  padding-top: 150px;
+  padding-bottom: 75px;
 	float: left;
 	display: inline;
 	width: 100%;
@@ -2631,9 +2633,9 @@ img{
 	}
 	.navbar-default .navbar-toggle {
 	  border-color: #ddd;
-	  margin-right: 78px;
+	  margin-right: 25px;
 	  margin-top: 32px;
-	  border-radius: 0;
+	  border-radius: 15;
 	}
 	.navbar-default .navbar-toggle:hover,
 	.navbar-default .navbar-toggle:focus{
