--- a/style.css
+++ b/style.css
@@ -623,7 +623,7 @@ img{
 #about{
   background-image: url("assets/images/giphy.gif");
   background-size: cover;
-	padding: 150px 0;
+	padding: 0px 0;
 	float: left;
 	display: inline;
 	width: 100%;
@@ -634,7 +634,7 @@ img{
 .welcome-area{
 
   padding-top: 275px;
-  padding-bottom: 75px;
+  padding-bottom: 50px;
 	float: left;
 	display: inline;
   color: #000
@@ -648,6 +648,38 @@ img{
 	position: relative;
 	text-align: center;
 	width: 100%;
+}
+.animation{
+
+
+  	font: 700 4em/1 "Oswald", sans-serif;
+  	letter-spacing: 0;
+  	padding: .25em 0 .325em;
+	  display: block;
+	  margin: 0 auto;
+  	text-shadow: 0 0 80px rgba(255,255,255,.5);
+
+/* Clip Background Image */
+
+	  background: url(http://f.cl.ly/items/010q3E1u3p2Q0j1L1S1o/animated_text_fill.png) repeat-y;
+	  -webkit-background-clip: text;
+	  background-clip: text;
+
+/* Animate Background Image */
+
+	  -webkit-text-fill-color: transparent;
+	  -webkit-animation: aitf 80s linear infinite;
+
+/* Activate hardware acceleration for smoother animations */
+
+	  -webkit-transform: translate3d(0,0,0);
+	  -webkit-backface-visibility: hidden;
+
+
+}
+@-webkit-keyframes aitf {
+	0% { background-position: 0% 50%; }
+	100% { background-position: 100% 50%; }
 }
 .tittle {
 	color: #ffffff;
@@ -1837,6 +1869,7 @@ img{
 	float: left;
 	text-align: center;
 	width: 100%;
+  padding-top: 50px;
 }
 .footer-logo{
 	display: inline-block;
@@ -3140,7 +3173,6 @@ img{
 
 }
 
-
 @media(max-width:320px ){
 	.search-area input[type="text"]:focus {
 		width: 210px;
@@ -3199,6 +3231,7 @@ img{
 	.popular-post-widget .media-body {
 	  text-align: center;
 	}
+
 
 
 }
