--- a/style.css
+++ b/style.css
@@ -621,13 +621,14 @@ img{
 /*--------------------*/
 
 #about{
-  background-image: url("assets/images/giphy.gif");
-  background-size: cover;
-	padding: 0px 0;
+  /*background-image: url("assets/images/giphy.gif");*/
+	background-image: url("https://static1.squarespace.com/static/54d09890e4b01d126f05a2e1/56c33e16b654f95147f1749a/56cdf9d6c2ea510fbd51bbae/1456339458974/Original.gif");
+    background-size: cover;
+	padding: 0 0;
 	float: left;
 	display: inline;
 	width: 100%;
-  padding-top: 100px;
+    padding-top: 100px;
 }
 #imgsec{
 }
@@ -637,15 +638,8 @@ img{
   padding-bottom: 50px;
 	float: left;
 	display: inline;
-  color: #000
+  color: #FFFFFF;
 
-	width: 100%;
-}
-.ted-left{
-
-	display: inline;
-	float: left;
-	padding: 30px;
 	width: 100%;
 }
 .registration{
@@ -661,11 +655,12 @@ img{
 .title-area {
 	display: inline;
 	float: left;
-	padding: 0 172px;
 	position: relative;
 	text-align: center;
 	width: 100%;
+	background-color: black;
 }
+
 .animation{
 
 
@@ -703,7 +698,6 @@ img{
 	font-size: 40px;
 	margin-bottom: 0;
 	padding-bottom: 18px;
-	font-family: 'Gugi', cursive;
 }
 .tittle-line {
 	background-color: #000000;
@@ -1801,7 +1795,7 @@ img{
 	margin-bottom: 5px;
 }
 .contact-right{
-	background-color: rgba(104, 102, 96, 0.5);
+	background-color: rgba(255, 255, 255, 0);
 	display: inline;
 	float: left;
 	padding: 30px 40px;
@@ -2605,9 +2599,6 @@ img{
 	}
 	.team-address span {
 	  font-size: 14px;
-	}
-	.title-area {
-	  padding: 0 100px;
 	}
 	.single-portfolio {
 	  width: 22.5%;
