--- a/style.css
+++ b/style.css
@@ -1203,7 +1203,6 @@ img{
 }
 .portfolio-menu ul li {
 	border-bottom: 1px solid #fff;
-	border-top: 1px solid #fff;
 	cursor: pointer;
 	display: inline-block;
 	font-family: "Raleway",sans-serif;
@@ -1232,6 +1231,7 @@ img{
 }
 .single-item{
 	width: 100%;
+	height: 180px;
 	position: relative;
 	overflow: hidden;
 }
